--- a/client/.index.html
+++ b/client/.index.html
@@ -36,6 +36,7 @@
       <div id="navbar" class="small-12" ui-view="navbar"></div>
     </div>
     <div class="row">
+        <h3>%{hostname}%</h3>
       <div id="main-content" class="small-12" ui-view=""></div>
     </div>
 </div>
